log
Sun, May  4, 2025  5:21:48 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Sun, May  4, 2025  5:58:54 PM: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:46:5: error: expected ';' before 'return'
     return new;
     ^~~~~~
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
9425871
